Fix search_after field values (#2679)
Closes #2678

(cherry picked from commit 9adc4d2b368fc600e58ac5d15c02cdc78c0dd743)